Savas mājaslapas izveide

--- a/index.html
+++ b/index.html
@@ -4,16 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arnis CV</title>
+    <title>Arnis Toks</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        Virsraksts
-    </h1>
-    <h2>Sveiks!</h2>
-    <p>
-        Teksts
-    </p>
-    <button>Poga</button>
+    <div class="main">
+        <div class="row center-xs">
+            <div class="col-xs-6">
+                <div class="logo">
+                    Logo
+                </div>
+                <div class="info-box">
+                    Meklēt
+                    Sākums Par mani Izglītība Darba pieredze Hobiji
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row center-xs">
+            <div class="col-xs-6">
+                <div class="box">
+                    <h1 id="main-title">
+                        Par mani
+                    </h1>
+                    <p class="paragraph">
+                            Mani sauc Arnis. Esmu 39 gadi sens. 🙂 Pēc vidusskolas biju izvēles priekšā iet studēt IT vai autotransportu. 
+                            Nosvēros par labu autotransportam, jo šaubījos, vai IT mācības varēšu "pavilkt", jo nebija iepriekš pārāk lielas pieredzes. 
+                            Tagad pēc vairāku gadu nostrādāšanas auto nozarē, kur lielākoties nācies strādāt klientu apkalpošanas jomā, vēlos pieņemt 
+                            jaunus izaicinājumus savā profesionālajā karjerā IT jomā, par kuru interese nav zudusi kopš skolas laikiem, kamēr galva vēl 
+                            "svaiga".
+                        <br>
+                            Lai veicas arī pārējiem!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
+
