Visas mājaslapas uzlabojumi

--- a/about-me.html
+++ b/about-me.html
@@ -5,8 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Par mani</title>
+    <link rel="icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Virsraksts</h1>
+    <div class="header">
+        <div class="container">
+            <div class="row bottom-xs">
+                <div class="col-xs-2">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="logo.jpg" alt="Logo" width="200px">
+                        </a> 
+                    </div>
+                </div>
+                <div class="col-xs-10">
+                    <div class="row end-xs">
+                        <div class="col-xs-12">
+                            <form action="" class="search_form">
+                                <div class="search">
+                                    <input type="text" placeholder="Meklēt" class="search_input">
+                                    <button type="submit" class="search_button">
+                                        <img src="search.png" alt="Meklēt" width="10" height="10">
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row center-xs">
+                        <div class="col-xs-12">
+                            <div class="nav">
+                                <div class="bottons">
+                                    <a href="index.html">Sākums</a>
+                                </div> 
+                                <div class="bottons">
+                                    <a href="about-me.html">Par mani</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="education.html">Izglītība</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="job-experience.html">Darba pieredze</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="hobbies.html">Hobiji</a> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row center-xs">
+                <div class="box">
+                    <h1 id="main-title">
+                        Par mani
+                    </h1>
+                    <p class="paragraph">
+                            Mani sauc Arnis. Esmu 39 gadi sens. 🙂 Pēc vidusskolas biju izvēles priekšā iet studēt IT vai autotransportu. 
+                            Nosvēros par labu autotransportam, jo šaubījos, vai IT mācības varēšu "pavilkt", jo nebija iepriekš pārāk lielas pieredzes. 
+                            Tagad pēc vairāku gadu nostrādāšanas auto nozarē, kur lielākoties nācies strādāt klientu apkalpošanas jomā, vēlos pieņemt 
+                            jaunus izaicinājumus savā profesionālajā karjerā IT jomā, par kuru interese nav zudusi kopš skolas laikiem, kamēr galva vēl 
+                            "svaiga".
+                        <br>
+                            Lai veicas arī pārējiem!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
