--- a/education.html
+++ b/education.html
@@ -5,8 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Izglītība</title>
+    <link rel="icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Izglītība</h1>
+    <div class="header">
+        <div class="container">
+            <div class="row bottom-xs">
+                <div class="col-xs-2">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="logo.jpg" alt="Logo" width="200px">
+                        </a> 
+                    </div>
+                </div>
+                <div class="col-xs-10">
+                    <div class="row end-xs">
+                        <div class="col-xs-12">
+                            <form action="" class="search_form">
+                                <div class="search">
+                                    <input type="text" placeholder="Meklēt" class="search_input">
+                                    <button type="submit" class="search_button">
+                                        <img src="search.png" alt="Meklēt" width="10" height="10">
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row center-xs">
+                        <div class="col-xs-12">
+                            <div class="nav">
+                                <div class="bottons">
+                                    <a href="index.html">Sākums</a>
+                                </div> 
+                                <div class="bottons">
+                                    <a href="about-me.html">Par mani</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="education.html">Izglītība</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="job-experience.html">Darba pieredze</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="hobbies.html">Hobiji</a> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="page">
+            <h1 id="main-title">
+                Izglītība
+            </h1>
+            <h3 class="medium-title">
+                Sarkaņu pamatskola
+            </h3>
+            <div class="row center-xs">
+                <img src="sarkanu_pamatskola.jpeg" alt="Sarkaņu pamatskola" width="700">
+            </div>
+            <br>
+            <h3 class="medium-title">
+                Madonas pilsētas ģimnāzija
+            </h3>
+            <div class="row center-xs">
+                <img src="madonas_gimnazija.jpeg" alt="Madonas pilsētas ģimnāzija" width="700">
+            </div>
+            <br>
+            <h3 class="medium-title">
+                Latvijas Lauksaimniecības universitāte
+            </h3>
+            <div class="row center-xs">
+                <a href="https://www.llu.lv" target="_blank"><img src="llu.jpeg" alt="Latvijas Lauksaimniecības universitāte" width="700"></a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
