--- a/index.html
+++ b/index.html
@@ -5,26 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arnis Toks</title>
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="row center-xs">
-            <div class="col-xs-6">
-                <div class="logo">
-                    Logo
+    <div class="header">
+        <div class="container">
+            <div class="row bottom-xs">
+                <div class="col-xs-2">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="logo.jpg" alt="Logo" width="200px">
+                        </a> 
+                    </div>
                 </div>
-                <div class="info-box">
-                    Meklēt
-                    Sākums Par mani Izglītība Darba pieredze Hobiji
+                <div class="col-xs-10">
+                    <div class="row end-xs">
+                        <div class="col-xs-12">
+                            <form action="" class="search_form">
+                                <div class="search">
+                                    <input type="text" placeholder="Meklēt" class="search_input">
+                                    <button type="submit" class="search_button">
+                                        <img src="search.png" alt="Meklēt" width="10" height="10">
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row center-xs">
+                        <div class="col-xs-12">
+                            <div class="nav">
+                                <div class="bottons">
+                                    <a href="index.html">Sākums</a>
+                                </div> 
+                                <div class="bottons">
+                                    <a href="about-me.html">Par mani</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="education.html">Izglītība</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="job-experience.html">Darba pieredze</a> 
+                                </div>
+                                <div class="bottons">
+                                    <a href="hobbies.html">Hobiji</a> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row center-xs">
-            <div class="col-xs-6">
                 <div class="box">
                     <h1 id="main-title">
                         Par mani
@@ -42,7 +77,6 @@
             </div>
         </div>
     </div>
-    
 </body>
 </html>
 
