--- a/about-me.html
+++ b/about-me.html
@@ -16,7 +16,7 @@
                 <div class="col-xs-2">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="logo.jpg" alt="Logo" width="200px">
+                            <img src="logo.png" alt="Logo" width="200px">
                         </a> 
                     </div>
                 </div>
