--- a/about-me.html
+++ b/about-me.html
@@ -59,21 +59,29 @@
         </div>
     </div>
     <div class="container">
-        <div class="row center-xs">
-                <div class="box">
-                    <h1 id="main-title">
-                        Par mani
-                    </h1>
-                    <p class="paragraph">
-                            Mani sauc Arnis. Esmu 39 gadi sens. 🙂 Pēc vidusskolas biju izvēles priekšā iet studēt IT vai autotransportu. 
-                            Nosvēros par labu autotransportam, jo šaubījos, vai IT mācības varēšu "pavilkt", jo nebija iepriekš pārāk lielas pieredzes. 
-                            Tagad pēc vairāku gadu nostrādāšanas auto nozarē, kur lielākoties nācies strādāt klientu apkalpošanas jomā, vēlos pieņemt 
-                            jaunus izaicinājumus savā profesionālajā karjerā IT jomā, par kuru interese nav zudusi kopš skolas laikiem, kamēr galva vēl 
-                            "svaiga".
-                        <br>
-                            Lai veicas arī pārējiem!
-                    </p>
-                </div>
+        <div class="page">
+            <h1 id="main-title">
+                Par mani
+            </h1>
+            <h3 class="medium-title">
+                Dzimis
+            </h3>
+            <div class="row center-xs">
+                <a href="https://www.gulbene.lv" target="_blank"><img src="gulbene.jpg" alt="Gulbene" width="700"></a>
+            </div>
+            <br>
+            <h3 class="medium-title">
+                Audzis
+            </h3>
+            <div class="row center-xs">
+                <a href="https://www.madona.lv" target="_blank"><img src="madona.jpg" alt="Madona" width="700"></a>
+            </div>
+            <br>
+            <h3 class="medium-title">
+                Dzīvo
+            </h3>
+            <div class="row center-xs">
+                <a href="https://www.riga.lv" target="_blank"><img src="riga.jpg" alt="Rīga" width="700"></a>
             </div>
         </div>
     </div>
