--- a/job-experience.html
+++ b/job-experience.html
@@ -81,7 +81,7 @@
                 VAS "Ceļu satiksmes drošības direkcija" - autovadītāju kvalifikācijas inspektors un automašīnu tehniskās apskates inspektors
             </h3>
             <div class="row center-xs">
-                <a href="https://www.csdd.lv/" target="_blank"><img src="csdd.jpeg" alt="Ceļu satiksmes drošības direkcija" width="700"></a>
+                <a href="https://www.csdd.lv" target="_blank"><img src="csdd.jpeg" alt="Ceļu satiksmes drošības direkcija" width="700"></a>
             </div>
             <br>
             <h3 class="medium-title">
@@ -96,7 +96,7 @@
                 SIA “Gros auto” - autoservisa speciālists un filiāles vadītājs
             </h3>
             <div class="row center-xs">
-                <a href="https://www.grosauto.lv/" target="_blank"><img src="gros-auto.jpeg" alt="Gros auto" width="700"></a>
+                <a href="https://www.grosauto.lv" target="_blank"><img src="gros-auto.jpeg" alt="Gros auto" width="700"></a>
             </div>
         </div>
     </div>
